# dngSdkExample

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vtmc/dngSdkExample2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/vtmc/dngSdkExample2/: MainActivity.kt
app/src/main/jni/: CMakeLists.txt  native-lib.cpp
app/src/main/jni/dng_sdk/source/: dng_jpeglib.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/vtmc/dngSdkExample2/: ExampleUnitTest.kt
dngSdkExample/app/: build.gradle.kts
dngSdkExample/app/src/main/java/com/example/myapplication/: MainActivity.kt
dngSdkExample/app/src/main/jni/: CMakeLists.txt  native-lib.cpp
dngSdkExample/app/src/main/res/layout/: activity_main.xml
dngSdkExample/app/src/main/res/values/: strings.xml
dngSdkExample/gradle/wrapper/: gradle-wrapper.properties
gradle/wrapper/: gradle-wrapper.properties
